Sat Oct 25 22:28:17 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (io_binwrite_string): Test writev() failure.

Sat Oct 25 20:19:19 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: added test_us_ascii.

Sat Oct 25 20:09:09 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: added US_ASCII
	  as trivially supported encoding (is always normalized,
	  and may appear mixed in with UTF-8 or other Unicode
	  encodings).

Sat Oct 25 20:01:01 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: added
	  test_raise_exception_for_non_unicode_encoding.

Sat Oct 25 19:30:30 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: removed unused function.

Sat Oct 25 18:41:41 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* template/unicode_norm_gen.tmpl: Adjusted name of generating file.

Fri Oct 24 22:49:42 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): dispatch newline and space at fluent
	  interface, so that the following identifier does not include the
	  space.  [ruby-dev:48684] [Bug #10411]

Fri Oct 24 20:41:36 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* signal.c (check_reserved_signal_): fix write count since r47991.

Thu Oct 23 21:42:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_delete): now does not call the block given to
	  the current method.  [ruby-core:65861] [Bug #10413]

Thu Oct 23 19:13:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_method_entry_make): warn redefinition only for
	  already defined methods, but not for undefined methods.
	  [ruby-dev:48691] [Bug #10421]

Thu Oct 23 17:19:04 2014  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/source.rb (REXML::IOSource#encoding_updated): Fix a
	  bug that can't parse XML correctly when
	  Encoding.default_internal is different with XML
	  encoding. REXML::Source converts XML encoding on read. So IO